# Skripsi

./: .gitignore  conv1.ipynb  conv1_base.py  conv1_superR.ipynb  conv2.ipynb  pyproject.toml  requirements.txt
Super-Refine/: analyst.ipynb  create-frame.ipynb  crop-preprocessing.ipynb  preprocessing-resolution.ipynb  tes.ipynb
apex/: __init__.py  apex_phase.py  apex_phase_visualizer.py  apex_smoother.py
comparasion/: main.py
core/: TabR.py  data_module.py  encoder.py  tabr_faithful.py  tabr_v2.py  utis.py  value_correction.py
features_extraction/: poc.py  quadran.py  vektor.py
helper/: helper.py
notebooks/: tabr_compare_timeaware_vs_event_inference.ipynb  tabr_datatest_event_inference.ipynb  tabr_datatest_event_inference_20_subjects.ipynb  tabr_event_inference.ipynb  tabr_feature_pruning_tuning.ipynb  tabr_final_analysis.ipynb  tabr_pca_lda_4qmv_tuning.ipynb  tabr_question_timeaware_tuning.ipynb
preprocess-anxiety/: analisis_versi_summary.csv  check_freeze_tabr.ipynb  export_apex_poc_abs_ordered.ipynb  export_apex_poc_abs_ordered_v2.ipynb  export_apex_tabr_train_test.ipynb  export_apex_tabr_train_test_v10.ipynb  export_apex_tabr_train_test_v11.ipynb  export_apex_tabr_train_test_v12.ipynb  export_apex_tabr_train_test_v13.ipynb  export_apex_tabr_train_test_v14.ipynb  export_apex_tabr_train_test_v15.ipynb  export_apex_tabr_train_test_v16.ipynb  export_apex_tabr_train_test_v17.ipynb  export_apex_tabr_train_test_v18.ipynb  export_apex_tabr_train_test_v19.ipynb  export_apex_tabr_train_test_v2.ipynb  export_apex_tabr_train_test_v20.ipynb  preproces-anxiety.ipynb  (+19 more)
(+31 files in other folders)
