[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
    "torch",
    "torchvision",
    # "torchaudio",
    "pillow",
    "pandas",
    "openpyxl",
    "opencv-python",
    "tqdm",
    "numpy",
    "matplotlib",
    "ipykernel",
    "kagglehub",
    "lightning",
    "scikit-learn",
    "optuna",
    "optuna-dashboard",
    "optuna-integration[pytorch_lightning]",
    "tabulate",
    "seaborn",
    "dlib",
    "tensorboard",
    "moviepy",
    "ipywidgets>=8.1.8",
    "delu>=0.0.26",
    "loguru>=0.7.3",
    "tomli>=2.4.0",
    "tomli-w>=1.2.0",
    "faiss-gpu-cu12>=1.14.1.post1",
]
